@@ -1,4 +1,5 @@
 export(fbOAuth)
+export(getCheckins)
 export(getFriends)
 export(getNetwork)
 export(getPage)
