@@ -6,3 +6,5 @@
     - Added 'link' argument to updateStatus 
     - Fixed typos in documentation
     - Now getFriends returns also locale of friends
+2013-12-08 - version 0.2.2:
+    - Added 'getCheckins' function
